@@ -1,3 +1,4 @@
+ - Add option finalize_tensor=true to assemble functions
  - Solver parameters can now be passed to solve
  - Remove deprecated function Variable::disp()
  - Remove deprecated function logging()
